AGGIUNTO TUTTO IL CSS E AGGIUNTO QUASI TUTTO IL CORPO DELLA PAGINA. IN CASO DI BUG RIPARTIRE DA QUI

--- a/index.html
+++ b/index.html
@@ -8,5 +8,50 @@
   </head>
   <body>
     <script src="script.js"></script>
+
+    <!--inizio body-->
+    <div id="container">
+
+        <div id="header"><h1>Installare un database mysql/mariadb su Raspberry pi</h1></div>
+
+        <div id="nav">nav Test</div>
+
+        <div id="slider-wrapper">
+
+            <div id="slider" class="nivoSlider">
+
+                <img src="img/databes con rasperry ù.jpg" alt="" />
+            </div>
+
+        </div>
+
+        <div class="item-evi"></div>
+
+        <div class="item-evi"></div>
+
+        <div class="item-evi"></div>
+
+        <div id="mes-full"></div>
+
+        <div id="content">Content pagina</div>
+
+        <div id="sidebar"></div>
+
+    </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
