Fatta 3 pagina (da aggiungere delle cose)

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <ul>
           <li><a href="https://Come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co"; style="color:#21aabd";>Installare database mysql/mariadb su Raspberry pi (Questo articolo)</a></li>
           <li><a href="phpmyadmin.html"; style="color:#21aabd"; >Come installare phpMyAdmin</a></li>
-          <li><a href="#"; style="color:#21aabd"; >Art 2</a></li>
+          <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale</a></li>
           <li><a href="#"; style="color:#21aabd"; >Art 3</a></li>
         </ul>
       </div>
