--- a/phpmyadmin.html
+++ b/phpmyadmin.html
@@ -135,7 +135,7 @@
 
           <li><a href="phpmyadmin.html"; style="color:#21aabd"; >Come installare phpMyAdmin (Questo articolo)</a></li>
 
-          <li><a href="#"; style="color:#21aabd"; >Art 2</a></li>
+          <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale</a></li>
 
           <li><a href="#"; style="color:#21aabd"; >Art 3</a></li>
         </ul>
