Finite tutte le 3 pagine. In caso di bug riprendere da qui.

--- a/database_Online.html
+++ b/database_Online.html
@@ -107,12 +107,12 @@
         <code>192.168.1.1</code> <br> 
         <br>
         Dopo aver premuto invio sarete entrati nella pagina delle impostazioni del vostro modem. <br><br>
-        La pagina vi chiedera di effetuare il login. Le credenziali le potete trovare dientro al vostro modem (le credenziali per il login <strong>NON</strong> sono le stesse per l'acesso alla rete).
+        La pagina vi chiedera di effetuare il login. Le credenziali le potete trovare dietro al vostro modem (le credenziali per il login <strong>NON</strong> sono le stesse per l'acesso alla rete).
         </p>
         <p>Dovete sapere che le pagine di configuarazione dei modem sono diverse per ogni brand, ma comunque il contenuto è lo stesso.</p> <br>
 
         <p>Portiamoci su Port Forwarding, generalmente nella sezione Sicurezza > Port Forwarding</p> <br>
-        Creiamo un novo elemento e impostiamo i parametri <br>
+        Creiamo un novo elemento e impostiamo i seguenti parametri <br>
         <ul>
           <li>Nome = Un nome qualunque</li>
           <li>Protocollo = TCP e UDP</li>
@@ -128,7 +128,7 @@
         <img loading="lazy" src="img/port forwarding.png" alt=""  width="479" />
 
         <p>Ora siamo pronti per cusare il nostro database fuyori dalla nostra rete locale. <br>
-        Nel prossimo articolo vedremo come cllegarlo e imposteremo un DNS dinamico all' Ip del ruter <br> Continua: <a href=""></a></p>
+        Nel prossimo articolo vedremo come cllegarlo e imposteremo un DNS dinamico all' Ip del ruter <br> Continua: <a href=""; style="color:#21aabd";></a></p>
 
 
       </div>
