Iniziata pagina del DNS dinamico

--- a/database_Online.html
+++ b/database_Online.html
@@ -127,8 +127,8 @@
 
         <img loading="lazy" src="img/port forwarding.png" alt=""  width="479" />
 
-        <p>Ora siamo pronti per cusare il nostro database fuyori dalla nostra rete locale. <br>
-        Nel prossimo articolo vedremo come cllegarlo e imposteremo un DNS dinamico all' Ip del ruter <br> Continua: <a href=""; style="color:#21aabd";></a></p>
+        <p>Ora siamo pronti per usare il nostro database fuori dalla nostra rete locale. <br>
+        Nel prossimo articolo vedremo come collegarlo e imposteremo un DNS dinamico all' Ip del ruter <br> Continua: <a href="dns_dinamico.html"; style="color:#21aabd";>Impostare il DNS dinamico</a></p>
 
 
       </div>
@@ -141,7 +141,7 @@
           <li><a href="https://Come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co"; style="color:#21aabd";>Installare database mysql/mariadb su Raspberry pi (Questo articolo)</a></li>
           <li><a href="phpmyadmin.html"; style="color:#21aabd"; >Come installare phpMyAdmin</a></li>
           <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale</a></li>
-          <li><a href="#"; style="color:#21aabd"; >Art 3</a></li>
+          <li><a href="dns_dinamico.html"; style="color:#21aabd"; >Impostare il DNS dinamico</a></li>
         </ul>
       </div>
 
