--- a/dns_dinamico.html
+++ b/dns_dinamico.html
@@ -21,8 +21,72 @@
 
     <link rel="shortcut icon" href="img/favicon.ico" />
   </head>
-  <body>
+  <body style="margin: 0"; bgcolor="#e2e2e0">
     <script src="script.js"></script>
+
+
+    <!--inizio Body------------------------------->
+
+    <div id="container">
+
+      <div id="header"><h1>Home of Tech</h1></div>
+
+      <div id="nav"><a href="https://come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co/"; style="color:white">HOME</a>
+      <a href="https://www.youtube.com/"; style="color:white">PAG1</a>
+      <a href="https://www.youtube.com/"; style="color:white">PAG2</a>
+      </div>
+
+      <div id="slider-wrapper">
+          <div id="slider" class="nivoSlider">
+            <img src="img/Dns dinamico modificato.png" alt=""; height="431" />
+
+          </div>
+      </div>
+      <div class="item-evi"><h2>Installare database mysql/mariadb su Raspberry pi</h2>
+        <p>In questo articolo vedremo come scaricare un database MySQL su un Raspberry Pi. Per riprodurre la guida necesssitiamo di un raspberry con sistema operatvo Raspian installato e l'SSH abilitato su nostro raspberry <a href="index.html"; style="color:#21aabd">(Vai all'articolo).</a> </p>
+      </div>
+
+      <div class="item-evi"><h2>Installare phpmyadmin su Raspberry pi</h2>
+        <p>Phpmyadmin è molto utile perchè permette di gestire i database mysql con interfaccia grafica, molto più pratico rispetto a gestirlo con il terminale <a href="phpmyadmin.html"; style="color:#21aabd">(Vai all'articolo).</a></p>
+      </div>
+
+      <div class="item-evi"><h2>Usare il Database fuori dalla tua rete locale</h2>
+        <p>Usare il data base fuori dalla nostra rete locale può servire per ad esempio per colegarlo ad un host remoto in questo articolo vedremo come, questo puorterà ad una minore sicurezza al data base <a href="database_Online.html"; style="color:#21aabd";>(Vai all' articolo)</a>.</p>
+      </div>
+
+      <div id="mes-full">Impostare il DNS dinamico</div>
+
+      <!--content------------------------------------>
+
+      <div id="content">
+        <h2>Creiamo un HostName</h2>
+        <p>Per creare un host name useremo un tool gratis che si chiama <a href="https://www.noip.com/">No-IP</a>, oltre al host name, creaeremo un DNS dinamico per comodità.</p>
+
+        <p>Quindi rechiamoci su <a href="https://www.noip.com/">No-IP</a>, creiamo un account e effeuiamo il login. 
+        </p>
+        <p>Ricordo che nel piano gratis e possibile creare solo fino a 3 host name per account che devono essere aggiornati ogni 30 giorni ppure andranno in ibernazione</p>
+
+      </div>
+
+      <!--fine content------------------------------->
+
+        <div id="sidebar">
+        <h2>Cambia articolo</h2>
+        <ul>
+          <li><a href="https://Come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co"; style="color:#21aabd";>Installare database mysql/mariadb su Raspberry pi (Questo articolo)</a></li>
+          <li><a href="phpmyadmin.html"; style="color:#21aabd"; >Come installare phpMyAdmin</a></li>
+          <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale</a></li>
+          <li><a href="dns_dinamico.html"; style="color:#21aabd"; >Impostare il DNS dinamico</a></li>
+        </ul>
+      </div>
+
+      <div class="clear"></div>
+
+      <div id="footer">© Copyright by Riccardo Bussano
+        <br><a href="https://github.com/rikvik2006/Come-fare-un-database-su-un-raspberry"; style="color: white">GitHub Repository</a>
+      </div>
+
+    </div>
     
   </body>
 </html>
