--- a/phpmyadmin.html
+++ b/phpmyadmin.html
@@ -142,7 +142,7 @@
 
           <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale</a></li>
 
-          <li><a href="#"; style="color:#21aabd"; >Art 3</a></li>
+          <li><a href="dns_dinamico.html"; style="color:#21aabd"; >Impostare il DNS dinamico</a></li>
         </ul>
       </div>
 
