--- a/database_Online.html
+++ b/database_Online.html
@@ -33,8 +33,8 @@
       <div id="header"><h1>Home of Tech</h1></div>
 
       <div id="nav"><a href="https://come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co/"; style="color:white">HOME</a>
-      <a href="https://www.youtube.com/"; style="color:white">PAG1</a>
-      <a href="https://www.youtube.com/"; style="color:white">PAG2</a>
+      <a href="tutte_le_pag.html"; style="color:white">ARTICOLI</a>
+
       </div>
 
       <div id="slider-wrapper">
@@ -138,9 +138,9 @@
       <div id="sidebar">
         <h2>Cambia articolo</h2>
         <ul>
-          <li><a href="https://Come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co"; style="color:#21aabd";>Installare database mysql/mariadb su Raspberry pi (Questo articolo)</a></li>
+          <li><a href="https://Come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co"; style="color:#21aabd";>Installare database mysql/mariadb su Raspberry pi</a></li>
           <li><a href="phpmyadmin.html"; style="color:#21aabd"; >Come installare phpMyAdmin</a></li>
-          <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale</a></li>
+          <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale (Questo articolo)</a></li>
           <li><a href="dns_dinamico.html"; style="color:#21aabd"; >Impostare il DNS dinamico</a></li>
         </ul>
       </div>
