--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <div id="header"><h1>Home of Tech</h1></div>
 
       <div id="nav"><a href="https://come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co/"; style="color:white">HOME</a>
-      <a href="https://www.youtube.com/"; style="color:white">PAG1</a>
-      <a href="https://www.youtube.com/"; style="color:white">PAG2</a>
+      <a href="tutte_le_pag.html"; style="color:white">ARTICOLI</a>
+
       </div>
 
       <div id="slider-wrapper">
