--- a/dns_dinamico.html
+++ b/dns_dinamico.html
@@ -71,10 +71,14 @@
         <p>Nella sezione Hostname scegliamo un host a piacere, invece nella sezione dominio possiamo scegliere uno tra quelli elencati. <br>
         Poi clicchiamo su aggiungi HostName.</p>
 
+        <h3>Installiamo DUC</h3>
+
         <p>Aggiunto l'HostName cerchiamo nalla barra laterale DNS Dinamico > Dynamic Update Client, qui troveremo il link per l'installazione di DUC (Dynamic Update Client). <br>
         Quindi selezionamo la versione per il nostro sistama operativo e scarichiamo il file.</p> 
         <p><img loading="lazy" src="img/DUC_installer.png" alt=""  width="479" /></p>
         <p>Apriamo il file di installazione, e installamio DUC.</p>
+
+        <h3>Impostiamo il DNS dinamico</h3>
 
         <p>Una volta instalato corretamente apriamolo, DUC chiedera di effetuare il login con l'account di No-IP che abbiamo creato in precedenza. <br>
         Dopo al login ci chiedera di selezionare gli host name su cui vogliamo che DUC imposti il DNS dinamico.</p>
@@ -98,13 +102,15 @@
           <li><a href="phpmyadmin.html"; style="color:#21aabd"; >Come installare phpMyAdmin</a></li>
           <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale</a></li>
           <li><a href="dns_dinamico.html"; style="color:#21aabd"; >Impostare il DNS dinamico (Questo articolo)</a></li>
+
+          <li><a href="come_collegare_il_database.html"; style="color:#21aabd">Come collegare il database</a></li>          
         </ul>
       </div>
 
       <div class="clear"></div>
 
       <div id="footer">© Copyright by Riccardo Bussano
-        <br><a href="https://github.com/rikvik2006/Come-fare-un-database-su-un-raspberry"; style="color: white">GitHub Repository</a>
+        <br><a href="https://github.com/rikvik2006/Come-fare-un-database-su-un-raspberry"; style="color:white"> <img src="img/GitHub_logo.png" alt="" width="20" height="20"> GitHub Repository</a>
       </div>
 
     </div>
