--- a/phpmyadmin.html
+++ b/phpmyadmin.html
@@ -143,13 +143,15 @@
           <li><a href="database_Online.html"; style="color:#21aabd"; >Usare il Database fuori dalla tua rete locale</a></li>
 
           <li><a href="dns_dinamico.html"; style="color:#21aabd"; >Impostare il DNS dinamico</a></li>
+
+          <li><a href="come_collegare_il_database.html"; style="color:#21aabd">Come collegare il database</a></li>          
         </ul>
       </div>
 
       <div class="clear"></div>
 
       <div id="footer">© Copyright by Riccardo Bussano
-        <br><a href="https://github.com/rikvik2006/Come-fare-un-database-su-un-raspberry"; style="color: white">GitHub Repository</a>
+        <br><a href="https://github.com/rikvik2006/Come-fare-un-database-su-un-raspberry"; style="color:white"> <img src="img/GitHub_logo.png" alt="" width="20" height="20"> GitHub Repository</a>
       </div>
 
 
