--- a/database_Online.html
+++ b/database_Online.html
@@ -79,7 +79,7 @@
         bind-address = Qualche indirizzo IP</code>
         <br>
         <br>
-        Assicuratevi di commentare la riga bind-address (usando il canceletto #), im modo che assomigli a questo:
+        Assicuratevi di commentare la riga bind-address (usando il canceletto #), in modo che assomigli a questo:
         <br>
         <p>
           <img loading="lazy" src="img/blind adress.png" alt=""  width="479" />
