--- a/dns_dinamico.html
+++ b/dns_dinamico.html
@@ -60,7 +60,7 @@
 
       <div id="content">
         <h2>Creiamo un HostName</h2>
-        <p>Per creare un host name useremo un tool gratis che si chiama <a href="https://www.noip.com/"; style="color:#21aabd";>No-IP</a>, oltre al host name, creaeremo un DNS dinamico per comodità.</p>
+        <p>Per creare un host name useremo un tool gratis che si chiama <a href="https://www.noip.com/"; style="color:#21aabd";>No-IP</a>, oltre al host name, creeremo un DNS dinamico per comodità.</p>
 
         <p>Quindi rechiamoci su <a href="https://www.noip.com/"; style="color:#21aabd";>No-IP</a>, creiamo un account e effeuiamo il login. 
         </p>
@@ -76,7 +76,7 @@
         <p>Aggiunto l'HostName cerchiamo nalla barra laterale DNS Dinamico > Dynamic Update Client, qui troveremo il link per l'installazione di DUC (Dynamic Update Client). <br>
         Quindi selezionamo la versione per il nostro sistama operativo e scarichiamo il file.</p> 
         <p><img loading="lazy" src="img/DUC_installer.png" alt=""  width="479" /></p>
-        <p>Apriamo il file di installazione, e installamio DUC.</p>
+        <p>Apriamo il file di installazione, e installiamo DUC.</p>
 
         <h3>Impostiamo il DNS dinamico</h3>
 
