Aggiunta la favicon all' heder. V1.0.1

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="container">
 
-      <div id="header"><h1>Home of Tech</h1></div>
+      <div id="header"><h1><img src="img/favicon.ico" alt="" height="50" class="float-left"> Home of Tech</h1></div>
 
       <div id="nav"><a href="https://come-fare-un-database-su-un-raspberry-2.riccardobussano.repl.co/"; style="color:white">HOME</a>
       <a href="tutte_le_pag.html"; style="color:white">ARTICOLI</a>
