Sito web finito modificate foto. V1.0.2

--- a/come_collegare_il_database.html
+++ b/come_collegare_il_database.html
@@ -42,7 +42,7 @@
 
     <div id="slider-wrapper">
         <div id="slider" class="nivoSlider">
-          <img src="img/databes con rasperry.png" alt=""; height="431" />
+          <img src="img/Conn data Mod.png" alt=""; height="431" />
 
         </div>
     </div>
