--- a/dns_dinamico.html
+++ b/dns_dinamico.html
@@ -89,6 +89,8 @@
 
         <p>Bene ora il nostro data base e pronto per essere usato, ora alposto di mettere IP del nostro modem e quindi modificarlo ogni volta alle sue variazioni ci basterà inserire il DNS e non dovremo più modificarlo. </p>
 
+        <p>Continua: <a href="come_collegare_il_database.html" style="color:#21aabd">Come  collegare il database</a></p>
+
 
 
       </div>
